# tfomsno-mpi

./: .gitignore  README.md  pyproject.toml
tfomsno_mpi/tfomsno_mpi_site/: manage.py
tfomsno_mpi/tfomsno_mpi_site/mpi/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
tfomsno_mpi/tfomsno_mpi_site/mpi/migrations/: 0001_initial.py  0002_mpishow_nsidudltype_nsimpipolistype_nsisex_and_more.py
tfomsno_mpi/tfomsno_mpi_site/mpi/templates/mpi/: index.html  mpi_get_person_data.html
tfomsno_mpi/tfomsno_mpi_site/mpi/templates/soap/: get_person_data.xml
tfomsno_mpi/tfomsno_mpi_site/templates/: base.html
tfomsno_mpi/tfomsno_mpi_site/tfomsno_mpi_site/: asgi.py  settings.py  urls.py  wsgi.py
